[tool.poetry]
name = "metapy-toolbox"
version = "2024.3.1"
description = ""
authors = ["wanderlei junior"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
numpy = ">1.26.2"
pandas = ">2.2.2"
tqdm = ">4.66.2"
openpyxl = ">3.1.2"
yfinance = "^0.2.40"
easyplot-toolbox = "2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
