[tool.poetry]
name = "metapy-toolbox"
version = "2024.3.1"
description = ""
authors = ["wanderlei junior"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
numpy = "*"
pandas = "*"
tqdm = "*"
openpyxl = "*"
yfinance = "*"
easyplot-toolbox = "*"


[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
